wordcount specific consumer added && Documented