@@ -1,4 +1,4 @@
-package org.github.ogomezso.javaconsumer.infrastructure.kafka;
+package org.github.ogomezso.wordcountconsumer.infrastructure.kafka;
 
 import static org.apache.kafka.clients.consumer.ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG;
 import static org.apache.kafka.clients.consumer.ConsumerConfig.CLIENT_ID_CONFIG;
@@ -11,7 +11,7 @@ import java.util.List;
 import java.util.Properties;
 
 import org.apache.kafka.clients.consumer.KafkaConsumer;
-import org.github.ogomezso.javaconsumer.config.AppConfig;
+import org.github.ogomezso.wordcountconsumer.config.AppConfig;
 
 import lombok.RequiredArgsConstructor;
 
@@ -21,18 +21,19 @@ public class KafkaConfig {
   public static final String DESERIALIZATION_STRING_DESERIALIZER = "org.apache.kafka.common.serialization.StringDeserializer";
   public static final String DESERIALIZATION_LONG_DESERIALIZER = "org.apache.kafka.common.serialization.LongDeserializer";
 
-  static KafkaConsumer<String, String> createChuckKafkaConsumer(AppConfig appConfig) {
+  static KafkaConsumer<String, Long> createWordCountConsumer(AppConfig appConfig) {
 
     Properties props = new Properties();
     props.put(BOOTSTRAP_SERVERS_CONFIG, appConfig.getBootstrapServers());
-    props.put(CLIENT_ID_CONFIG, appConfig.getChuckClientId());
-    props.put(GROUP_ID_CONFIG, appConfig.getChuckGroupId());
+    props.put(CLIENT_ID_CONFIG, appConfig.getWordCountClientId());
+    props.put(GROUP_ID_CONFIG, appConfig.getWordCountGroupId());
     props.put(KEY_DESERIALIZER_CLASS_CONFIG, DESERIALIZATION_STRING_DESERIALIZER);
-    props.put(VALUE_DESERIALIZER_CLASS_CONFIG, DESERIALIZATION_STRING_DESERIALIZER);
+    props.put(VALUE_DESERIALIZER_CLASS_CONFIG, DESERIALIZATION_LONG_DESERIALIZER);
 
-    final KafkaConsumer<String, String> consumer = new KafkaConsumer<>(props);
-    consumer.subscribe(List.of(appConfig.getChuckTopic()));
+    final KafkaConsumer<String, Long> consumer = new KafkaConsumer<>(props);
+    consumer.subscribe(Collections.singletonList(appConfig.getWordCountTopic()));
 
     return consumer;
   }
+
 }
